// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label renders with different Colours 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <span
<<<<<<< HEAD
    className="sc-dhyxXW fwZBKw"
=======
    className="sc-dpRLZP ewWXeF"
>>>>>>> 1b794d7d29292ea9c9c441f3c26feec14606b3a2
  >
    Xsmall
  </span>
  <span
<<<<<<< HEAD
    className="sc-dhyxXW hYQKLz"
=======
    className="sc-dpRLZP hlQOoC"
>>>>>>> 1b794d7d29292ea9c9c441f3c26feec14606b3a2
    color="goten.100"
  >
    Xsmall
  </span>
  <span
<<<<<<< HEAD
    className="sc-dhyxXW kkDWyb"
=======
    className="sc-dpRLZP dsLApC"
>>>>>>> 1b794d7d29292ea9c9c441f3c26feec14606b3a2
    color="goten.100"
  >
    Xsmall
  </span>
</div>
`;

exports[`Label renders with different Icons 1`] = `
<div
  className="flex flex-col justify-around items-center w-full"
>
  <div
    className="flex justify-around items-center w-full mb-4"
  >
    <span
<<<<<<< HEAD
      className="sc-dhyxXW hqBYaf"
=======
      className="sc-dpRLZP TYZXi"
>>>>>>> 1b794d7d29292ea9c9c441f3c26feec14606b3a2
      size="twoxsmall"
    >
      <span
        className="sc-jNxMLV jyUfnG"
        size="twoxsmall"
      >
        <svg
          className="sc-iqGgem"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      Twoxsmall
    </span>
    <span
<<<<<<< HEAD
      className="sc-dhyxXW btHLoD"
=======
      className="sc-dpRLZP didIBW"
>>>>>>> 1b794d7d29292ea9c9c441f3c26feec14606b3a2
      size="twoxsmall"
    >
      Twoxsmall
      <span
        className="sc-ctuRtO lnfntV"
        size="twoxsmall"
      >
        <svg
          className="sc-jgbSNz"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </span>
    <span
<<<<<<< HEAD
      className="sc-dhyxXW jZVZYF"
=======
      className="sc-dpRLZP fgOiVs"
>>>>>>> 1b794d7d29292ea9c9c441f3c26feec14606b3a2
      size="twoxsmall"
    >
      <span
        className="sc-jNxMLV jyUfnG"
        size="twoxsmall"
      >
        <svg
          className="sc-iqGgem"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      Twoxsmall
      <span
        className="sc-ctuRtO lnfntV"
        size="twoxsmall"
      >
        <svg
          className="sc-jgbSNz"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </span>
  </div>
  <div
    className="flex justify-around items-center w-full"
  >
    <span
<<<<<<< HEAD
      className="sc-dhyxXW kgYurW"
=======
      className="sc-dpRLZP kTFUZX"
>>>>>>> 1b794d7d29292ea9c9c441f3c26feec14606b3a2
    >
      <span
        className="sc-jNxMLV koKKHf"
      >
        <svg
          className="sc-iqGgem"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      Xsmall
    </span>
    <span
<<<<<<< HEAD
      className="sc-dhyxXW byxTja"
=======
      className="sc-dpRLZP lbFdiD"
>>>>>>> 1b794d7d29292ea9c9c441f3c26feec14606b3a2
    >
      Xsmall
      <span
        className="sc-ctuRtO ldQxmw"
      >
        <svg
          className="sc-jgbSNz"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </span>
    <span
<<<<<<< HEAD
      className="sc-dhyxXW bbkjIE"
=======
      className="sc-dpRLZP bSzwaF"
>>>>>>> 1b794d7d29292ea9c9c441f3c26feec14606b3a2
    >
      <span
        className="sc-jNxMLV koKKHf"
      >
        <svg
          className="sc-iqGgem"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      Xsmall
      <span
        className="sc-ctuRtO ldQxmw"
      >
        <svg
          className="sc-jgbSNz"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;

exports[`Label renders with different LetterCases 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <span
<<<<<<< HEAD
    className="sc-dhyxXW fwZBKw"
=======
    className="sc-dpRLZP ewWXeF"
>>>>>>> 1b794d7d29292ea9c9c441f3c26feec14606b3a2
  >
    Default
  </span>
  <span
<<<<<<< HEAD
    className="sc-dhyxXW hUzgET"
=======
    className="sc-dpRLZP ixWsZW"
>>>>>>> 1b794d7d29292ea9c9c441f3c26feec14606b3a2
  >
    Lowercase
  </span>
</div>
`;

exports[`Label renders with different Sizes 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <span
<<<<<<< HEAD
    className="sc-dhyxXW hqnqzd"
=======
    className="sc-dpRLZP giLSFY"
>>>>>>> 1b794d7d29292ea9c9c441f3c26feec14606b3a2
    size="twoxsmall"
  >
    Twoxsmall
  </span>
  <span
<<<<<<< HEAD
    className="sc-dhyxXW fwZBKw"
=======
    className="sc-dpRLZP ewWXeF"
>>>>>>> 1b794d7d29292ea9c9c441f3c26feec14606b3a2
  >
    Xsmall
  </span>
  <span
<<<<<<< HEAD
    className="sc-dhyxXW eewSrc"
=======
    className="sc-dpRLZP eyJcCp"
>>>>>>> 1b794d7d29292ea9c9c441f3c26feec14606b3a2
    size="twoxsmall"
  >
    Twoxsmall
  </span>
  <span
<<<<<<< HEAD
    className="sc-dhyxXW hUzgET"
=======
    className="sc-dpRLZP ixWsZW"
>>>>>>> 1b794d7d29292ea9c9c441f3c26feec14606b3a2
  >
    Xsmall
  </span>
</div>
`;
